--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,7 @@
-name: user actions
-on: workflow_dispatch # changed to push for automatique
+name: User Actions
+on: 
+  workflow_dispatch # Change to `push` for automatic runs on code push
+
 env:
   AWS_REGION: us-east-2
   ECR_REPOSITORY: userapp
@@ -9,44 +11,46 @@ jobs:
   Testing:
     runs-on: ubuntu-latest
     steps:
-      -name: Code checkout
+      - name: Code checkout
         uses: actions/checkout@v3
 
-      -name: Maven test 
-       run: mvn test
+      - name: Maven test
+        run: mvn test
 
-      -name: Checkstyle
-       run: mvn checkstyle:checkstyle
+      - name: Checkstyle
+        run: mvn checkstyle:checkstyle
 
-      #Setup java 17 to default (sonar-scaner requirement as )###
-      -name: Set Java 17
-       uses: action/setups-java@v4
-       with:
-        distribution: 'temurin'
-      
-      # Setup sonar-scaner
-      -name: Setup SonarQube
-       uses: warchant/setup-sonar-scanner@v7
+      # Setup Java 17 (Sonar Scanner requirement)
+      - name: Set Java 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
-      # Run sonar-scanner
+      # Setup SonarQube scanner
+      - name: Setup SonarQube
+        uses: warchant/setup-sonar-scanner@v7
+
+      # Run SonarQube scan
       - name: SonarQube Scan
-        run: sonar-scanner
-           -Dsonar.host.url=${{ secrets.SONAR_URL }}
-           -Dsonar.login=${{ secrets.SONAR_TOKEN }}
-           -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
-           -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
-           -Dsonar.sources=src/
-           -Dsonar.junit.reportsPath=target/surefire-reports/ 
-           -Dsonar.jacoco.reportsPath=target/jacoco.exec 
-           -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml
-           -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/  
-     # Check the Quality Gate status.
+        run: |
+          sonar-scanner \
+            -Dsonar.host.url=${{ secrets.SONAR_URL }} \
+            -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
+            -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }} \
+            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} \
+            -Dsonar.sources=src/ \
+            -Dsonar.junit.reportsPath=target/surefire-reports/ \
+            -Dsonar.jacoco.reportsPath=target/jacoco.exec \
+            -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml \
+            -Dsonar.java.binaries=target/
+
+      # Check the Quality Gate status
       - name: SonarQube Quality Gate check
         id: sonarqube-quality-gate-check
         uses: sonarsource/sonarqube-quality-gate-action@master
-     # Force to fail step after specific time.
+        # Force to fail step after specific time.
         timeout-minutes: 5
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_URL }} #OPTIONAL
-
+          SONAR_HOST_URL: ${{ secrets.SONAR_URL }}
